--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,10 @@
         <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+      </li>
+
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
