--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,10 +14,9 @@
 
 
 	<h1>Dashboard</h1>
-	<br/><br/>
-    <p>Logged in</p>
+	<br/>
 
-    <a href="{{ url_for('logout') }}">Logout</a>
+    <a id="logout" href="{{ url_for('logout') }}">Logout</a>
 
 <br/><br/>
 
