--- a/templates/name.html
+++ b/templates/name.html
@@ -25,7 +25,7 @@
         <br/>
         <p id="demo">some stuff</p>
 {#        change demo to javascript#}
-        <script src="{{ url_for('static', filename='js/myfile.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
     {% else %}
     <h1>Enter Name</h1>
