--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ url_for('index') }}">Flask App</a>
+  <a class="navbar-brand" href="{{ url_for('dashboard') }}">University Page</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('user', name='Nathan') }}">User Profile</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('name') }}">Name</a>
-      </li>
+{#      <li class="nav-item">#}
+{#        <a class="nav-link" href="{{ url_for('user', name='Nathan') }}">User Profile</a>#}
+{#      </li>#}
+{##}
+{#      <li class="nav-item">#}
+{#        <a class="nav-link" href="{{ url_for('name') }}">Name</a>#}
+{#      </li>#}
 
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
@@ -22,6 +22,10 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
       </li>
+
+{#      <li class="nav-item">#}
+{#        <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>#}
+{#      </li>#}
 
 
     </ul>
