--- a/templates/update.html
+++ b/templates/update.html
@@ -9,7 +9,6 @@
 	  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 
-
 {% endfor %}
 
 
@@ -22,9 +21,6 @@
 	<tr>
     <td>{{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }} - {{ our_user.role }}
     </td>
-{#	<td>{{ our_user.id }}. <a href="{{ url_for('update', id=our_user.id)}}">{{ our_user.name }}</a> - {{ our_user.email }} - {{ our_user.favorite_color }} -#}
-{#		<a href="{{ url_for('delete', id=our_user.id)}}">Delete</a></td>#}
-
 	</tr>
 {% endfor %}
 
@@ -43,11 +39,6 @@
 		{{ form.name(class="form-control", value=name_to_update.name) }}
 		<br/>
 
-{#		{{ form.username.label(class="form-label") }}#}
-{##}
-{#		{{ form.username(class="form-control") }}#}
-{#		<br/>#}
-
 		{{ form.email.label(class="form-label") }}
 
 		{{ form.email(class="form-control", value=name_to_update.email) }}
@@ -58,25 +49,10 @@
 		{{ form.role(class="form-control", value=name_to_update.role) }}
 		<br/>
 
-        {{ form.password.label(class="form-label") }}
+        {{ form.password_hash.label(class="form-label") }}
 
-		{{ form.password(class="form-control") }}
+		{{ form.password_hash(class="form-control") }}
 		<br/>
-{##}
-{#		{{ form.favorite_color.label(class="form-label") }}#}
-{##}
-{#		{{ form.favorite_color(class="form-control") }}#}
-{#		<br/>#}
-{##}
-{#		{{ form.password_hash.label(class="form-label") }}#}
-{##}
-{#		{{ form.password_hash(class="form-control") }}#}
-{#		<br/>#}
-{##}
-{#		{{ form.password_hash2.label(class="form-label") }}#}
-{##}
-{#		{{ form.password_hash2(class="form-control") }}#}
-{#		<br/>#}
 
 		{{ form.submit(class="btn btn-secondary") }}
 
@@ -92,13 +68,6 @@
     <td>{{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }} - {{ our_user.role }}
     </td></tr>
 {% endfor %}
-
-{#	<td>{{ our_user.id }}. <a href="{{ url_for('update', id=our_user.id)}}">{{ our_user.name }}</a> - {{our_user.username }} - {{ our_user.email }} - {{ our_user.favorite_color }} -#}
-{#	PW: {{ our_user.password_hash }} -#}
-{#	<a href="{{ url_for('delete', id=our_user.id)}}">Delete</a></td>#}
-{#	</tr>#}
-{#{% endfor %}#}
-{##}
 
 
 </table>
