--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,12 @@
 {% block content %}
 
 
-	<h1>Hello World!</h1>
+	<h1 id="dash">University Page</h1>
+
+    <br/><br/>
+
+       <img id="logo" src="{{ url_for('static', filename='images/uniglos.jpg' )}}"
+        width="200">
 
 
 {% endblock %}
