--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,6 @@
 
 {% endfor %}
 
-
 	<h1>Login</h1>
 	<br/><br/>
 
@@ -35,5 +34,8 @@
 	</form>
 </div>
 <br/><br/>
+
+           <img id="logoLogin" src="{{ url_for('static', filename='images/uniglos.jpg' )}}"
+        width="200">
 
 {% endblock %}
