--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,18 +15,18 @@
 {#        <a class="nav-link" href="{{ url_for('name') }}">Name</a>#}
 {#      </li>#}
 
+    {% if current_user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
       </li>
-
+{% else %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
       </li>
-
+    {% endif %}
 {#      <li class="nav-item">#}
 {#        <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>#}
 {#      </li>#}
-
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
