--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <br/><br/>
 
-       <img id="logo" src="{{ url_for('static', filename='images/uniglos.jpg' )}}"
+       <img id="logo" src="{{ url_for('static', filename='images/uni.jpg' )}}"
         width="200">
 
 
