--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
 
 <br/><br/>
 
-       <img id="logo" src="{{ url_for('static', filename='images/uniglos.jpg' )}}"
+       <img id="logo" src="{{ url_for('static', filename='images/uni.jpg' )}}"
         width="200">
 
     <br/><br/>
