--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,7 @@
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
     <script src="https://www.google.com/recaptcha/api.js"></script>
-{#    <script>#}
-{#   function onSubmit(token) {#}
-{#     document.getElementById("login_form").submit();#}
-{#   }#}
-{#    </script>#}
+
 
     <title>Application</title>
   </head>
@@ -55,18 +51,11 @@
         <br/>
 		{{ form.submit(class="btn btn-secondary") }}
 
-{#        {{ form.submit(class="g-recaptcha btn btn-secondary", data-sitekey="{{ SITE_KEY }}", data-callback="onSubmit", data-action="submit" )}}#}
-
-{#        <button class="g-recaptcha btn btn-secondary"#}
-{#        data-sitekey="{{ site_key }}"#}
-{#        data-callback='onSubmit'#}
-{#        data-action='submit'>Submit Captcha</button>#}
-
 	</form>
 </div>
 <br/><br/>
 
-           <img id="logoLogin" src="{{ url_for('static', filename='images/uniglos.jpg' )}}"
+           <img id="logoLogin" src="{{ url_for('static', filename='images/uni.jpg' )}}"
         width="200">
 
 {#{% endblock %}#}
